--- a/client/src/Table.css
+++ b/client/src/Table.css
@@ -1,8 +1,8 @@
 .root {
     width: '100%';
-    margin-top: theme.spacing(3);
+    margin-top: 20px;
     overflow: 'auto';
 }
 .table {
-    minWidth: 650;
+    min-width: 650px;
   }
